# arrow-simpledb

./: .bazelrc  .gitignore  BUILD.md  CMakeLists.txt  README.md
collage/: BUILD  CMakeLists.txt  Util.hpp  main.cc
edge-store/: BUILD  CMakeLists.txt  Util.cc  Util.hpp  store.cc
lib/: BUILD  CMakeLists.txt
lib/columns/: BaseColumnCursor.cc  BaseColumnCursor.hpp  ChunkedColumnCursor.cc  ChunkedColumnCursor.hpp  ChunkedDictColumnCursor.cc  ChunkedDictColumnCursor.hpp  GenericColumnCursor.cc
lib/core/: DBSchema.cc
lib/filters/: AndFilter.cc  AndFilter.hpp  GreaterThanFilter.cc  GreaterThanFilter.hpp  IsNullFilter.cc  IsNullFilter.hpp  LessThanFilter.cc  LessThanFilter.hpp  NotFilter.cc  NotFilter.hpp
lib/tables/: DBColumnBuilder.cc  DBColumnBuilder.hpp  DBTable.cc  DBTable.hpp  FilterProjectTableCursor.cc  FilterProjectTableCursor.hpp  ScanTableCursor.cc  ScanTableCursor.hpp  TableCursor.cc  TableCursor.hpp
libcollage/: BUILD  CMakeLists.txt
libcollage/columns/: BaseColumnCursor.cc  ChunkedColumnCursor.cc  ChunkedColumnCursor.hpp  ChunkedDictColumnCursor.hpp  GenericColumnCursor.hpp
libcollage/core/: DBSchema.cc  DBSchema.hpp
libcollage/filters/: AndFilter.cc  Filter.hpp  IsNullFilter.cc  IsNullFilter.hpp  NotFilter.hpp
libcollage/tables/: DBTable.hpp  FilterProjectTableCursor.cc  ScanTableCursor.cc  ScanTableCursor.hpp  TableCursor.cc  TableCursor.hpp
test/: CMakeLists.txt  TableTest.cc  TableTest.hpp  Tables.cc  Tables.hpp
testdb/: CMakeLists.txt  TableTest.cpp  Tables.cpp
toolchain/: cc_toolchain_config.bzl
